Update validation option for product variant